[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/pause menu/rsz_2pause_square_button.png" type="Texture" id=1]
[ext_resource path="res://ui/pause menu/rsz_1play_square_button.png" type="Texture" id=2]
[ext_resource path="res://ui/pause menu/rsz_1picsart_22-10-23_08-14-53-479.png" type="Texture" id=3]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-14-39-522.png" type="Texture" id=4]
[ext_resource path="res://ui/pause menu/rsz_1on_off_square_button.png" type="Texture" id=5]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-13-11-951.png" type="Texture" id=6]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-12-48-088.png" type="Texture" id=7]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-13-41-918.png" type="Texture" id=8]
[ext_resource path="res://ui/pause menu/rsz_return_square_button.png" type="Texture" id=9]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-14-00-339.png" type="Texture" id=10]
[ext_resource path="res://ui/pause menu/rsz_1home_square_button.png" type="Texture" id=11]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-16-13-166.png" type="Texture" id=12]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-16-01-008.png" type="Texture" id=13]
[ext_resource path="res://ui/main menu/pause.gd" type="Script" id=14]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-15-46-534.png" type="Texture" id=15]
[ext_resource path="res://ui/pause menu/rsz_1picsart_22-10-23_08-15-28-816.png" type="Texture" id=16]

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
visible = false

[node name="VBoxContainer" type="HBoxContainer" parent="PauseMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.0
margin_bottom = 50.0
alignment = 1

[node name="Exit" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_left = 34.0
margin_right = 134.0
margin_bottom = 100.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Main Menu" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_left = 138.0
margin_right = 238.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )

[node name="Restart" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_left = 242.0
margin_right = 342.0
margin_bottom = 100.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )

[node name="Resume" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_left = 346.0
margin_right = 446.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseButton" type="TextureButton" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = 16.0
margin_right = -29.0
margin_bottom = 46.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="DarkOverlay" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="DarkOverlay" type="ColorRect" parent="DarkOverlay"]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[connection signal="pressed" from="PauseMenu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_PauseButton_pressed"]
